Working classroom selector

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                   
                 data-toggle="modal" data-target="#mymodal">Add New Students</button> </h2>
                 <label for="classrooms">Choose a classroom:</label>
-                <form action="." method="post">
+                <form action="." method="POST">
                   <select name="chosenclass" id="chosenclass">
                      <option value="107i am">107i am</option>
                      <option value="305e am">305e am</option>
