--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
                 <h2><b>Student Reports </b> <button type="button"  class="btn btn-success float-right"
                   
                 data-toggle="modal" data-target="#mymodal">Add New Students</button> </h2>
-                <label for="classrooms">Choose a classroom:</label>
+                <label for="selectedFormOption">Choose a classroom:</label>
                 <form action="." method="POST">
-                  <select name="chosenclass" id="chosenclass">
+                  <select name="selectedFormOption" id="selectedFormOption" onchange="">
                      <option value="107i am">107i am</option>
                      <option value="305e am">305e am</option>
                      <option value="107i pm">107i pm</option>
@@ -49,7 +49,7 @@
                         <th>PA Comment</th>
                         <th>PB Comment</th>
                         <th>PC Comment</th>
-                        <th></th> </th>
+                        <th>          </th>
                         <th>Select a Comment</th>
                     </tr>
 
